mejoras en chat